<resources>
    <string name="app_name">Journal_Perso</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_accueil">Accueil</string>
    <string name="menu_mesEsapces">Mes espaces</string>
    <string name="menu_espacesDuJour">Mes espaces du jour :</string>
    <string name="menu_consulterDonnees">Mes données</string>
    <string name="menu_parametres">Paramètres</string>
    <string name="menu_calendrier">Calendrier</string>
    <string name="title_activity_inscription">inscription</string>
    <string name="tIndic">Type indicateur :</string>

    <string-array name="typeIndicateurNom">
        <item>1- CheckBox</item>
        <item>2- TextEdit</item>
    </string-array>
</resources>
