<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_espaces_du_jour">

    <fragment
        android:id="@+id/nav_mes_esapces"
        android:name="com.example.journal_perso.ui.mesEspaces.MesEspacesFragment"
        android:label="@string/menu_mesEsapces"
        tools:layout="@layout/fragment_mes_espaces" />

   <fragment
        android:id="@+id/nav_espaces_du_jour"
        android:name="com.example.journal_perso.ui.esapcesDuJour.EspacesDuJourFragment"
        android:label="@string/menu_espacesDuJour"
        tools:layout="@layout/fragment_espaces_du_jour" />

    <fragment
        android:id="@+id/nav_consulter_donnees"
        android:name="com.example.journal_perso.ui.mesDonnees.MesDonneesFragment"
        android:label="@string/menu_consulterDonnees"
        tools:layout="@layout/fragment_mes_donnees" />

    <fragment
        android:id="@+id/nav_calendrier"
        android:name="com.example.journal_perso.ui.calendrier.CalendrierFragment"
        android:label="@string/menu_calendrier"
        tools:layout="@layout/fragment_calendrier" />

    <fragment
        android:id="@+id/nav_parametres"
        android:name="com.example.journal_perso.ui.parametres.ParametresFragment"
        android:label="@string/menu_parametres"
        tools:layout="@layout/fragment_parametres" />
</navigation>